[gd_scene load_steps=4 format=3 uid="uid://h4ijickwt4mh"]

[ext_resource type="Script" uid="uid://cayhendwxxuv8" path="res://Menu/mainmenu.gd" id="1_f1h8f"]
[ext_resource type="AudioStream" uid="uid://cslnxx10lt6i1" path="res://Assets/confirm_style_5_005.wav" id="2_hm1c7"]
[ext_resource type="AudioStream" uid="uid://bdcs4pgfqqnq2" path="res://Assets/error_style_4_001.wav" id="3_kpjom"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_f1h8f")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0)

[node name="Container" type="Container" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.375
offset_top = -54.125
offset_right = 43.375
offset_bottom = 54.125
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/Container"]
layout_mode = 2
mouse_behavior_recursive = 1

[node name="Button" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Button2")
theme_override_font_sizes/font_size = 32
text = "PLAY"

[node name="Button2" type="Button" parent="ColorRect/Container/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../Button")
theme_override_font_sizes/font_size = 32
text = "QUIT"

[node name="Container2" type="Container" parent="ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.0
offset_top = -25.0
offset_right = 146.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="ColorRect/Container2"]
layout_mode = 2
text = "Use W and S for movement in menus."

[node name="Container3" type="Container" parent="ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 31.0
grow_horizontal = 2

[node name="Label" type="Label" parent="ColorRect/Container3"]
layout_mode = 2
text = "didnt work"

[node name="Pick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_hm1c7")

[node name="Move" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_kpjom")
volume_db = 12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.3

[connection signal="focus_exited" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_focus_exited"]
[connection signal="pressed" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="ColorRect/Container/VBoxContainer/Button" to="." method="_on_button_toggled"]
[connection signal="focus_exited" from="ColorRect/Container/VBoxContainer/Button2" to="." method="_on_button_2_focus_exited"]
[connection signal="pressed" from="ColorRect/Container/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
[connection signal="toggled" from="ColorRect/Container/VBoxContainer/Button2" to="." method="_on_button_2_toggled"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
